# discrete-gaussian

./: Cargo.toml  README.md
.circleci/: config.yml
examples/: vartime.rs
src/: consttime.rs  ctime.rs  lib.rs  vartime.rs  vtime.rs
